# genome_organization

./: README.md  pyproject.toml  setup.py
examples/: README.md  collision_rate_test_10mer.ipynb  homopolymer_scaling_bulk.ipynb  run_homopolymer_sim.py
examples/Megaenhancers/exp_data_visualization/: APA_interchrom.py  APA_intrachrom.py  mega_enhancer_25kb_coolpup_pileup.clpy
examples/Megaenhancers/experimental_data/: 4DNFIZ39QE5I.mcool-10.0K_over_enh-dense_anchors_merged_10-shifts.clpy  F4v2_loops.txt  ME_loop.bed  ME_monomer_types.npy  Nuclear_speckle_anchors.bed  Nuclear_speckle_anchors_merged.bed  enh-dense_anchors.bed  enh-dense_anchors_merged.bed  enh-dense_anchors_self.bedpe  gene-dense_anchors.bed  gene-dense_anchors_merged.bed
examples/Megaenhancers/simulation_code/: ME_monomer_types.npy  local_submit_ME.py  mcool_to_monomer_types.ipynb  run_ME_sim.py  which_chrom_from_bed_n.ipynb
examples/slurm/: run_heteropolymer_benchmarks.py  submit_heteropolymer_benchmarks.py
polychrom/polychrom/legacy/: forces.py
src/: __init__.py
src/chunkchromatin/: chromosome.py  lamina.py  simulation.py  template.ipynb
src/genome_organization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/polychrom/: __init__.py
src/polychrom/polychrom/: forces.py  simulation.py
src/polykit/: __init__.py
src/polykit/polykit/: __init__.py
src/utilis/: __init__.py  contact_map_consensus.py  contact_map_development.ipynb  domain_visualization.py  hp_sim_cones_consensus_200kb.cool  polychrom_hp_functions.py  simulation_accessory.py  simulation_contact_vs_hic.ipynb
(+2 files in other folders)
